<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_roadmap"
            android:icon="@drawable/ic_menu_roadmap_24"
            android:title="@string/menu_roadmap" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings_24"
            android:title="@string/menu_settings" />

    </group>


    <item android:title="">
        <menu>
            <item
                android:id="@+id/layout"
                android:icon="@drawable/ic_menu_logout_24"
                android:title="@string/logout" />
        </menu>
    </item>




</menu>